Syntax checks work; logical validation is incomplete.
Special moves (en passant, castling) are stubs.

Error reporting exists but lacks context;